Revert "#266 - Fix postcards overflow on campaign details view"
This reverts commit 5ae00c92eb27e9865022a5bc177c090636db1939.

--- a/src/index.css
+++ b/src/index.css
@@ -473,3 +473,9 @@ h1 {
 .ui.page.modals.dimmer.transition.visible.active {
   background-color: rgba(0, 0, 0, 0.95) !important;
 }
+
+/* Mobile Only */
+.ui.container.remove-margins {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
